--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "configbot": "node configure.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
     "@orbs-network/ton-access": "^2.2.2",
     "@tanstack/react-query": "^4.24.4",
     "@tonconnect/ui-react": "^2.0.0-beta.2",
@@ -18,6 +22,7 @@
     "is-mobile": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2",
     "styled-components": "^5.3.6",
     "ton": "13.3.0",
     "ton-core": "^0.46.0",
