--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@tanstack/react-query": "^4.24.4",
     "@tonconnect/ui-react": "^2.0.0-beta.2",
     "@twa-dev/sdk": "^6.4.2",
+    "@types/firebase": "^3.2.3",
     "buffer": "^6.0.3",
+    "firebase": "^11.0.1",
     "is-mobile": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.2",
+    "react-ticker": "^1.3.2",
     "styled-components": "^5.3.6",
     "ton": "13.3.0",
     "ton-core": "^0.46.0",
