--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "configbot": "node configure.js"
   },
   "dependencies": {
+    "@firebase/functions-types": "^0.6.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.0",
